Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -97,7 +97,7 @@
    "source": [
     "def next_up():\n",
     "    travel_destinations[0]\n",
-    "    return next_up\n",
+    "    return travel_destin\n",
     "    "
    ]
   },
