--- a/index.ipynb
+++ b/index.ipynb
@@ -91,13 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def next_up():\n",
     "    travel_destinations[0]\n",
-    "    return travel_destin\n",
+    "    return travel_destinations[0]\n",
     "    "
    ]
   },
