Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -98,6 +98,7 @@
     "def next_up():\n",
     "    travel_destinations[0]\n",
     "    return travel_destinations[0]\n",
+    "next_up\n",
     "    "
    ]
   },
