--- a/index.ipynb
+++ b/index.ipynb
@@ -91,14 +91,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'argentina'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def next_up():\n",
     "    travel_destinations[0]\n",
     "    return travel_destinations[0]\n",
-    "next_up\n",
+    "next_up()\n",
     "    "
    ]
   },
