Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,10 @@
     }
    ],
    "source": [
-    "favorite_destination() # 'madagascar'"
+    "favorite_destination() # 'madagascar'favorite_destination()\n",
+    "travel_destinations[-1] # 'madagascar'\n",
+    "\n",
+    "travel_destinations()"
    ]
   },
   {
