Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -175,7 +175,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    word='madagascar'\n",
-    "    return word\n"
+    "    return word\n",
+    "fav\n"
    ]
   },
   {
