Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -176,7 +176,7 @@
     "def favorite_destination():\n",
     "    word='madagascar'\n",
     "    return word\n",
-    "fav\n"
+    "favorite_destination()\n"
    ]
   },
   {
