--- a/index.ipynb
+++ b/index.ipynb
@@ -227,9 +227,7 @@
     "    new_travel=travel_destinations.append('madagascar')\n",
     "    return new_travel\n",
     "favorite_destination()\n",
-    "travel_destinations[-1] # 'madagascar'\n",
-    "\n",
-    "travel_destinations()\n"
+    "travel_destin\n"
    ]
   },
   {
