Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -226,8 +226,7 @@
     "def favorite_destinations():\n",
     "    new_travel=travel_destinations.append('madagascar')\n",
     "    return new_travel\n",
-    "favorite_destination()\n",
-    "travel_destin\n"
+    "    return \n"
    ]
   },
   {
