--- a/index.ipynb
+++ b/index.ipynb
@@ -206,16 +206,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destinations():\n",
     "    new_travel=travel_destinations.append('madagascar')\n",
     "    return new_travel\n",
     "    \n",
-    "travel_"
+    "travel_destinations"
    ]
   },
   {
