--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,8 @@
     "def favorite_destinations():\n",
     "    new_travel=travel_destinations.append('madagascar')\n",
     "    return new_travel\n",
-    "    \n"
+    "    \n",
+    "favorite_destinations"
    ]
   },
   {
