--- a/index.ipynb
+++ b/index.ipynb
@@ -206,27 +206,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destinations():\n",
     "    new_travel=travel_destinations.append('madagascar')\n",
     "    return new_travel\n",
     "    \n",
-    "favorite_destinations"
+    "favorite_destinations()"
    ]
   },
   {
