--- a/index.ipynb
+++ b/index.ipynb
@@ -206,12 +206,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destinations():\n",
+    "    travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "    new_travel=travel_destinations.append('madagascar')\n",
     "    return new_travel\n",
     "    \n",
